# dff

./: AUTHORS  CHANGES  CHANGES.current  CMakeLists.txt  INSTALL.Unix  README  RELEASENOTES  __init__.py  dff-gui.py  dff.py
api/datatype/: CMakeLists.txt  __init__.py  datatype.cpp  libdatatype.i  magic.mgc  magichandler.py
api/filters/: CMakeLists.txt  astnodes.cpp  astnodes.hpp  filter.cpp  lexer.cpp  lexer.hpp  lexer.l  libfilters.i  parser.cpp  parser.hpp  parser.y  parserparam.hpp  typeparser.hpp
api/gui/model/: CMakeLists.txt  __init__.py  search_model.py  vfsitemmodel.cpp  vfsitemmodel.py
api/gui/model/python/: vfsitemmodel.sip
api/index/: CMakeLists.txt  __init__.py  index.cpp  index_search.cpp  libindex.i
api/index/CLucene.bak/: clucene-config.h
api/magic/: CMakeLists.txt  __init__.py  filetype.py  libmagichandler.i  magichandler.cpp  py_magic.c
api/search/: CMakeLists.txt  __init__.py  boyer_moore.cpp  boyer_moore.hpp  find.py  libsearch.i  pattern.hpp  search.cpp
api/tree/: CMakeLists.txt  TwoThreeNode.cpp  TwoThreeNode.hpp  TwoThreeTree.cpp  TwoThreeTree.hpp  __init__.py  libtree.i
api/types/: CMakeLists.txt  OS.py  __init__.py  argument.cpp  arguments.cpp  config.cpp  confmanager.cpp  constant.cpp  libtypes.i  path.cpp  results.cpp  variant.cpp  vtime.cpp
api/variant/: CMakeLists.txt  __init__.py  libvariant.i  variant.cpp
api/vfs/: CMakeLists.txt  DEventHandler.cpp  __init__.py  attributesindexer.cpp  decoder.cpp  fdmanager.cpp  filemapping.cpp  fso.cpp  iodevice.py  libvfs.i  mfso.cpp  node.cpp  vfile.cpp  vfs.cpp  vfs.py  vlink.cpp
api/vfs/libvfspy/: Attributes.rst  FileMapping.rst  VFS.rst  _libenv.py  _libsearch.py  _libvariant  _libvariant.py  conf.py  d_event.rst  d_event_handler.rst  env_args_c.rst  env_config_c.rst  env_env_c.rst  env_results.rst  env_vars_c.rst  index.rst  libenv.i  libenv.py  libenv.rst  libsearch.py  libsearch.rst  libvariant.py  libvariant.rst  libvfs.py  libvfs.rst  libvfs_mod.rst  make.bat  mfso.rst  node_class.rst  search_algorithm.rst  search_search_c.rst  type_id_c.rst  variant.py  variant_c.rst  vfile.rst  vlist.rst  vmap.rst
example/dummy/: CMakeLists.txt  DummyNode.cpp  DummyNode.hpp  dummy.cpp  dummy.hpp  dummy.i
modules/connector/aff/: CMakeLists.txt  aff.cpp  aff.hpp  aff.i  affnode.cpp  affnode.hpp
modules/fs/extfs/: BlkList.cpp  CMakeLists.txt  CustomAttrib.cpp  CustomResults.cpp  DirLs.cpp  Directory.cpp  ExtfsFile.cpp  ExtfsNode.cpp  ExtfsRawDataNode.cpp  ExtfsShiftNode.cpp  ExtfsSymLinkNode.cpp  FileNameRecovery.cpp  FsStat.cpp  InodeStat.cpp  InodeUtils.cpp  InodesList.cpp  Journal.cpp  JournalStat.cpp  JournalType.tpp  MfsoAttrib.cpp  Option.cpp  OrphansInodes.cpp  RegularFile.cpp  SuperBlockUtils.cpp  SymLink.cpp  Time.cpp  extfs.cpp  extfs.hpp  extfs.i  tmp.py
modules/fs/extfs/data_structure/: BootCode.cpp  DirEntry.cpp  Ext4Extents.cpp  ExtendedAttr.cpp  GroupDescriptor.cpp  Inode.cpp  InodeAccessors.cpp  InodeStructure.cpp  SuperBlock.cpp  SuperBlockStructure.cpp  data_structure.h
modules/fs/extfs/include/: BlkList.h  CustomAttrib.h  CustomResults.h  DirLs.h  Directory.h  ExtfsFile.h  ExtfsNode.h  ExtfsRawDataNode.h  ExtfsShiftNode.h  ExtfsSymLinkNode.h  FileNameRecovery.h  FsStat.h  InodeContent.h  InodeStat.h  InodesList.h  Journal.h  JournalStat.h  JournalType.h  MfsoAttrib.h  Option.h  OrphansInodes.h  RegularFile.h  SymLink.h  Time.h
modules/fs/ntfs/: CMakeLists.txt  attribute.cpp  attribute.hpp  boot.cpp  boot.hpp  common.hpp  mftentry.cpp  mftentry.hpp  mftfile.cpp  mftfile.hpp  ntfs.cpp  ntfs.hpp  ntfs.i  ntfsnode.cpp  ntfsnode.hpp
modules/fs/ntfs/attributes/: attributelist.cpp  attributelist.hpp  bitmap.cpp  bitmap.hpp  data.cpp  data.hpp  filename.cpp  filename.hpp  indexallocation.cpp  indexroot.cpp  (+8 more)
modules/fs/windevices/: CMakeLists.txt  wdevices.hpp  windevices.i
modules/mailbox/pff/: CMakeLists.txt  libbfio_wrapper.cpp  libbfio_wrapper.hpp  pff.cpp  pff.hpp  pff.i  pff_common.hpp  pff_export.cpp  pff_info.cpp  pff_macro.hpp  pff_node.hpp  pff_node_appointment.cpp  pff_node_attachment.cpp  pff_node_contact.cpp  pff_node_data.cpp  pff_node_email.cpp  pff_node_email_attributes.cpp  pff_node_email_message.cpp  pff_node_email_transport_headers.cpp  pff_node_folder.cpp  pff_node_meeting.cpp  pff_node_note.cpp  pff_node_task.cpp  pff_node_unallocated_blocks.cpp
modules/search/indexer/: CMakeLists.txt  indexer.cpp  indexer.hpp  indexer.i
ui/gui/: CMakeLists.txt  __init__.py  gui.py  gui.qrc  gui_rc.py  mainwindow.py  mainwindow.ui  translator.py
ui/gui/configuration/: CMakeLists.txt  __init__.py  _configure.py  conf.py  configure.py  translator.py
ui/gui/dialog/: CMakeLists.txt  __init__.py  dialog.py  preferences.py  preferences.ui
ui/gui/i18n/: CMakeLists.txt  Dff_de.ts  Dff_en.ts  Dff_es.ts  Dff_fr.ts  Dff_it.ts  Dff_nl.ts  Dff_zh.ts  Project_en.ts  Project_fr.ts  UI_en.ts  UI_fr.ts  dff.pro
ui/gui/ide/: CMakeLists.txt  __init__.py  actions.py  dockide.py  editor.py  explorer.py  generatecode.py  highlighter.py  ide.py  idewizard.py  idewizardpages.py  messagebox.py
ui/gui/resources/: CMakeLists.txt  SearchStr.ui  __init__.py  about.ui  advance_search.ui  applymodule.ui  bookmarkdialog.ui  build_search_clause.ui  devicesdialog.ui  edit_dict.ui  env.ui  errors.ui  evidencedialog.ui  extractdialog.ui  gui.qrc  ide.ui  idewizard.ui  interpreter.ui  is_deleted.ui  is_file_or_folder.ui  mainwindow.ui  modif_index.ui  modulegeneratorwidget.ui  modules.ui  node_f_box.ui  nodebrowser.ui  nodefilterbox.ui  nodeviewbox.ui  or_and.ui  output.ui  preferences.ui  propertytable.ui  search.ui  search_attrs.ui  search_clause.ui  search_date.ui  search_dict.ui  search_empty.ui  search_mime_type.ui  search_size.ui  (+6 more)
ui/gui/utils/: CMakeLists.txt  __init__.py  action.py  menu.py  utils.py
ui/gui/vfs/: CMakeLists.txt  __init__.py  docknodelist.py
ui/gui/widget/: CMakeLists.txt  IndexOpt.py  SelectMimeTypes.py  __init__.py  env.py  help.py  info.py  interpreter.py  mime_types.py  modif_index.py  modules.py  modulesmanager.py  preview.py  shell.py  stdio.py  taskmanager.py
(+494 files in other folders)
